--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -6,7 +6,7 @@ app:
   # Set the build version ID to deploy for the "Build, deploy, and run" 
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
-  version: ""
+  version: "42e4cf06-ecda-4ed6-b8f0-9b9e2c57af2c"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
