--- a/environments/staging/environment.yaml
+++ b/environments/staging/environment.yaml
@@ -6,7 +6,7 @@ app:
   # Set the build version ID to deploy for the "Build, deploy, and run" 
   # scenario. If the value is set to an empty string ("") the application
   # is not deployed.
-  version: ""
+  version: "de349915-b360-4600-bd30-4d75fb3fcf58"
   
   # Set the Maven coordinates of the Maven artifact to deploy for the 
   # "Deploy, and run" scenario.
